aula sobre seletores no css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,36 @@
     </header>
 
     <main>
-        <p></p>
+        <h2 id="titulo">Seletor pela tag, classe e id.</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur illum, asperiores illo dignissimos accusantium blanditiis pariatur harum dolore dolor possimus quia eos repellendus sit reprehenderit atque laborum porro, nesciunt voluptates.</p>
+
+        <p class="paragrafo">Fui selecionado pela minha classe</p>
+
+        <form action="" classe="cadastro-form">
+            <div>
+                <label for="">Nome:</label>
+                <input type="text">
+            </div>
+
+            <div>
+                <label for="">Senha:</label>
+                <input type="password">
+            </div>
+        </form>
+
+        <form action="" class="login-form">
+            <div>
+            <label for="">Usuário:</label>
+            <input type="text">
+            </div>
+
+            <div>
+                <label for="">email:</label>
+                <input type="text">
+            </div>
+
+            <input type="button" value="Enviar">
+        </form>
     </main>
 </body>
 </html>
